bin_PROGRAMS=a.out
a_out_SOURCES=6502Emulator.cpp ROM.cc CPU.cc ADC.cc AND.cc ASL.cc BCC.cc BIT.cc BRK.cc CLEAROperations.cc CMP.cc \
	CPX_Y.cc DEC.cc DEX_Y.cc EOR.cc INC.cc INX_Y.cc JMP.cc JSR.cc LDA.cc LDX_Y.cc LSR.cc NOP.cc ORA.cc Stack.cc ROL.cc ROR.cc \
	RTI.cc RTS.cc SBC.cc SETOperations.cc STA.cc STX_Y.cc TRANSFEROperations.cc AddressSpace.cpp RAM.cpp